src/test/ui/issues/issue-17001.stderr
error[E0574]: expected struct, variant or union type, found module `foo`
  --> $DIR/issue-17001.rs:4:13
   |
LL |     let p = foo { x: () };
   |             ^^^ not a struct, variant or union type

error: aborting due to previous error

